# taskboard

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs
ui/: App.slint  theme.slint
ui/components/: toggle-theme.slint
ui/pages/: main.slint
