[package]
name = "taskboard"
version = "0.1.0"
edition = "2024"
description = "A modern task board application built with Slint and Rust"
authors = ["José Augusto <josemoura212@gmail.com>"]
license = "MIT"
repository = "https://github.com/josemoura212/taskboard"

[[bin]]
name = "taskboard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
slint = { version = "1.12.1", features = ["backend-winit"] }
thiserror = "2.0.16"

[build-dependencies]
slint-build = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

